test/functions/bradc/typeFns/myTypeFnConstKeyword.good
myTypeFnConstKeyword.chpl:1: In function 'myint':
myTypeFnConstKeyword.chpl:1: error: illegal return of type where value is expected
  myTypeFnConstKeyword.chpl:3: called as myint(param x = true)
